--- a/index.html
+++ b/index.html
@@ -1,137 +1,175 @@
-import { useState, useEffect, useRef } from "react";
-import { motion, AnimatePresence } from "framer-motion";
-import { Input } from "@/components/ui/input";
-import { Button } from "@/components/ui/button";
-import { Card, CardContent } from "@/components/ui/card";
-import { Trash, Trash2, CheckCircle, Moon, Sun, Menu, Clock, BarChart, BookOpen } from "lucide-react";
-
-export default function TodoApp() {
-  const [tasks, setTasks] = useState([]);
-  const [newTask, setNewTask] = useState("");
-  const [darkMode, setDarkMode] = useState(() => localStorage.getItem("darkMode") === "true");
-  const [confirmDelete, setConfirmDelete] = useState(new Set());
-  const [menuOpen, setMenuOpen] = useState(false);
-  const [page, setPage] = useState("todo");
-  const menuRef = useRef(null);
-
-  useEffect(() => {
-    try {
-      const savedTasks = JSON.parse(localStorage.getItem("tasks")) || [];
-      setTasks(savedTasks);
-    } catch (error) {
-      console.error("Error parsing tasks from localStorage", error);
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jednoduchý To-Do List</title>
+  <style>
+    :root {
+      --lightgreen: #9ef7b7;
+      --verylightgray: #ededed;
+      --bg-light: #f3f4f6;
+      --bg-dark: #1f2937;
+      --text-light: #111827;
+      --text-dark: #f9fafb;
+      --card-light: #ffffff;
+      --card-dark: #374151;
+      --border-light: #e5e7eb;
+      --border-dark: #4b5563;
     }
-  }, []);
-
-  useEffect(() => {
-    localStorage.setItem("tasks", JSON.stringify(tasks));
-    localStorage.setItem("darkMode", darkMode);
-  }, [tasks, darkMode]);
-
-  useEffect(() => {
-    const handleClickOutside = (event) => {
-      if (menuRef.current && !menuRef.current.contains(event.target)) {
-        setMenuOpen(false);
-      }
-    };
-    document.addEventListener("mousedown", handleClickOutside);
-    return () => document.removeEventListener("mousedown", handleClickOutside);
-  }, []);
-
-  const addTask = () => {
-    const trimmedTask = newTask.trim();
-    if (trimmedTask) {
-      setTasks([...tasks, { text: trimmedTask, completed: false }]);
-      setNewTask("");
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      background-color: var(--bg-light);
+      color: var(--text-light);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 2rem;
+      transition: background-color 0.3s, color 0.3s;
     }
-  };
-
-  const toggleComplete = (index) => {
-    setTasks(tasks.map((task, i) => (i === index ? { ...task, completed: !task.completed } : task)));
-  };
-
-  const removeTask = (index) => {
-    if (confirmDelete.has(index)) {
-      setTasks(tasks.filter((_, i) => i !== index));
-      setConfirmDelete((prev) => {
-        const newSet = new Set(prev);
-        newSet.delete(index);
-        return newSet;
-      });
-    } else {
-      setConfirmDelete((prev) => new Set(prev).add(index));
+    body.dark {
+      background-color: var(--bg-dark);
+      color: var(--text-dark);
     }
-  };
-
-  const openTasks = tasks.filter((task) => !task.completed).length;
-  const doneTasks = tasks.filter((task) => task.completed).length;
-
-  const renderPage = () => {
-    switch (page) {
-      case "pomodoro":
-        return <h2 className="text-2xl">Pomodoro Timer Coming Soon...</h2>;
-      case "habit":
-        return <h2 className="text-2xl">Habit Tracker Coming Soon...</h2>;
-      case "budget":
-        return <h2 className="text-2xl">Budget Tracker Coming Soon...</h2>;
-      case "journal":
-        return <h2 className="text-2xl">Daily Journal Coming Soon...</h2>;
-      default:
-        return (
-          <>
-            <h1 className="text-3xl font-bold mb-6">Minimalist To-Do List</h1>
-            <p className="mb-4">Open: {openTasks} | Done: {doneTasks}</p>
-            <div className="flex gap-2 w-full max-w-md">
-              <Input 
-                value={newTask} 
-                onChange={(e) => setNewTask(e.target.value)} 
-                placeholder="Add a new task..." 
-                className="flex-1" 
-              />
-              <Button onClick={addTask} className="bg-gray-200 dark:bg-gray-700 hover:bg-blue-100 dark:hover:bg-blue-500 transition-all">Add</Button>
-            </div>
-            <ul className="mt-4 w-full max-w-md">
-              <AnimatePresence>
-                {tasks.map((task, index) => (
-                  <motion.li 
-                    key={index} 
-                    initial={{ opacity: 0, y: -10 }} 
-                    animate={{ opacity: 1, y: 0 }} 
-                    exit={{ opacity: 0, y: 10 }}
-                    className="mt-3">
-                    <Card className={`rounded-lg border text-card-foreground shadow-sm transition-all ${task.completed ? "bg-[#9ef7b7] dark:bg-[#9ef7b7]" : "hover:bg-[#ededed] dark:hover:bg-[#ededed]"}`}>
-                      <CardContent className="flex justify-between p-3">
-                        <span className={task.completed ? "line-through text-green-600" : ""}>{task.text}</span>
-                        <div className="flex gap-2">
-                          <Button variant="ghost" onClick={() => toggleComplete(index)} className="hover:text-green-500">
-                            <CheckCircle size={16} />
-                          </Button>
-                          <Button variant="ghost" onClick={() => removeTask(index)} className="hover:text-red-500">
-                            {confirmDelete.has(index) ? <Trash2 size={16} className="text-red-600" /> : <Trash size={16} />}
-                          </Button>
-                        </div>
-                      </CardContent>
-                    </Card>
-                  </motion.li>
-                ))}
-              </AnimatePresence>
-            </ul>
-          </>
-        );
+    .container {
+      width: 100%;
+      max-width: 480px;
     }
-  };
-
-  return (
-    <div className={`min-h-screen flex flex-col items-center justify-center p-6 transition-all ${darkMode ? "bg-gray-900 text-white" : "bg-gray-100 text-gray-900"}`}>
-      <div className="absolute top-5 right-5 flex gap-2" ref={menuRef}>
-        <Button onClick={() => setDarkMode(!darkMode)} className="bg-gray-200 dark:bg-gray-700 hover:bg-blue-100 dark:hover:bg-blue-500 transition-all p-3 rounded-lg">
-          {darkMode ? <Sun size={24} /> : <Moon size={24} />}
-        </Button>
-        <Button onClick={() => setMenuOpen(!menuOpen)} className="bg-gray-200 dark:bg-gray-700 hover:bg-blue-100 dark:hover:bg-blue-500 transition-all p-3 rounded-lg">
-          <Menu size={28} />
-        </Button>
-      </div>
-      {renderPage()}
+    input[type="text"] {
+      width: 100%;
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 0.5rem;
+      font-size: 1rem;
+      margin-bottom: 1rem;
+    }
+    button {
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 0.5rem;
+      background-color: #d1d5db;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+    button:hover {
+      background-color: #cbd5e1;
+    }
+    .task {
+      background-color: var(--card-light);
+      border: 1px solid var(--border-light);
+      border-radius: 0.5rem;
+      padding: 1rem;
+      margin-bottom: 0.5rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      transition: background-color 0.2s;
+    }
+    .task:hover {
+      background-color: var(--verylightgray);
+    }
+    .task.done {
+      background-color: var(--lightgreen);
+      text-decoration: line-through;
+    }
+    .dark .task {
+      background-color: var(--card-dark);
+      border-color: var(--border-dark);
+    }
+    .dark .task:hover {
+      background-color: #2d3748;
+    }
+    .dark .task.done {
+      background-color: var(--lightgreen);
+    }
+    .task button {
+      margin-left: 0.5rem;
+    }
+    .counter {
+      margin-bottom: 1rem;
+      font-weight: bold;
+    }
+    .top-controls {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 1rem;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="top-controls">
+      <h1>To-Do List</h1>
+      <button onclick="toggleDarkMode()">🌓</button>
     </div>
-  );
-}
+    <p class="counter">Otevřené: <span id="openCount">0</span> | Hotové: <span id="doneCount">0</span></p>
+    <input type="text" id="taskInput" placeholder="Přidat nový úkol..." />
+    <button onclick="addTask()">Přidat</button>
+    <div id="taskList"></div>
+  </div>
+
+  <script>
+    const taskList = document.getElementById('taskList');
+    const taskInput = document.getElementById('taskInput');
+    const openCount = document.getElementById('openCount');
+    const doneCount = document.getElementById('doneCount');
+    let tasks = [];
+    let confirmDeleteIndex = null;
+
+    function addTask() {
+      const text = taskInput.value.trim();
+      if (text) {
+        tasks.push({ text, done: false });
+        taskInput.value = '';
+        renderTasks();
+      }
+    }
+
+    function toggleDone(index) {
+      tasks[index].done = !tasks[index].done;
+      renderTasks();
+    }
+
+    function deleteTask(index) {
+      if (confirmDeleteIndex === index) {
+        tasks.splice(index, 1);
+        confirmDeleteIndex = null;
+      } else {
+        confirmDeleteIndex = index;
+      }
+      renderTasks();
+    }
+
+    function renderTasks() {
+      taskList.innerHTML = '';
+      let open = 0;
+      let done = 0;
+      tasks.forEach((task, index) => {
+        const taskEl = document.createElement('div');
+        taskEl.className = 'task' + (task.done ? ' done' : '');
+        taskEl.innerHTML = `
+          <span>${task.text}</span>
+          <div>
+            <button onclick="toggleDone(${index})">✔</button>
+            <button onclick="deleteTask(${index})">${confirmDeleteIndex === index ? '🗑❌' : '🗑'}</button>
+          </div>
+        `;
+        taskList.appendChild(taskEl);
+        task.done ? done++ : open++;
+      });
+      openCount.textContent = open;
+      doneCount.textContent = done;
+    }
+
+    taskInput.addEventListener('keypress', e => {
+      if (e.key === 'Enter') addTask();
+    });
+
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark');
+    }
+  </script>
+</body>
+</html>
