--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jednoduchý To-Do List</title>
+  <meta name="author" content="Martin Kasan">
+  <title>To-Do List</title>
   <style>
     :root {
       --lightgreen: #9ef7b7;
